--- a/src/main/resources/other/jdbc.properties
+++ b/src/main/resources/other/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://172.24.5.30:3306/tx?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8&useSSL=false
-jdbc.username=xiangdangdang
-jdbc.password=4XvH&$*z24Vpno1^#3kI4y9wvzhiRZ
-#jdbc.username=user
-#jdbc.password=3295286
-#jdbc.url=jdbc:mysql://47.93.97.143:3306/xdd?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8&useSSL=false
+#jdbc.url=jdbc:mysql://172.24.5.30:3306/tx?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8&useSSL=false
+#jdbc.username=xiangdangdang
+#jdbc.password=4XvH&$*z24Vpno1^#3kI4y9wvzhiRZ
+jdbc.username=user
+jdbc.password=3295286
+jdbc.url=jdbc:mysql://127.0.0.1:3306/xdd?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8&useSSL=false
